# evangelist

./: .env.example  .gitignore  PRD.md  README.md  api_test_results.json  compose.yml  test_api.py
backend/: Dockerfile  pyproject.toml
backend/app/api/: main.py
backend/app/api/routers/: auth.py  datasets.py  evals.py  invocations.py  suites.py
backend/app/modules/clickhouse/: __init__.py  main.py
backend/app/modules/datasets/: __init__.py  main.py  models.py  repo.py
backend/app/modules/evals/: __init__.py  main.py  models.py  repo.py
backend/app/modules/minio/: __init__.py  main.py
backend/app/modules/postgredb/: main.py  queries.py
backend/app/modules/response_model/: main.py
backend/app/modules/suites/: __init__.py  main.py  models.py  repo.py
backend/app/modules/templates/: evaluation-script.py  invocation-script.py  postprocessing-script.py  preprocessing-script.py  request-invocation-script.py  workflow-template.json
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/datasets/: page.tsx
frontend/src/app/evaluations/: page.tsx
frontend/src/app/suites/: page.tsx
frontend/src/components/: app-sidebar.tsx  dataset-preview.tsx  invocation-config.tsx  test-results-display.tsx  upload-modal.tsx  workflow-configuration.tsx  workflow-empty-state.tsx  workflow-visualization.tsx
frontend/src/components/layout/: main-layout.tsx
frontend/src/components/ui/: accordion.tsx  json-path-selector.tsx  (+4 more)
frontend/src/lib/: api.ts  date-utils.ts  types.ts
nginx/: nginx.conf
(+4 files in other folders)
