[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "clickhouse-connect>=0.9.2",
    "duckdb>=1.4.1",
    "fastapi>=0.118.3",
    "minio>=7.2.18",
    "psycopg2-binary>=2.9.11",
    "python-multipart>=0.0.20",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.44",
    "uvicorn>=0.37.0",
]
